Tue July 1, 2022

1. Updated Stan to C++ compiler v2.30.0 (development).

Tue June 21, 2022

1. Updated Stan to C++ compiler v2.30.0-rc1 (development).

Sat April 23, 2022

1. Fixed environment variables in `rstanplugin` (#1006).

Wed April 13, 2022

1. Fixed building vignettes.
2. Fixed `log_prob` and test gradient mode in `stan_fit`.
3. Removed support for loading `tbbmalloc_proxy` on macOS.

Sun March 27, 2022

1. Fixed Stan to C++ code translation and parsing, with `stanc3`.

Thu March 10, 2022

1. Fixed `stanc_builder` ignoring user-provided `isystem` (#991).
2. Fixed unexpected failure with exiting `*.rds` file (#993).
3. Fixed a backward compatibility issue with `stan::io::validate_dims`.

Wed December 15, 2021

1. Using `RcppParallel::CxxFlags()` instead of `RcppParallel::LdFlags()`.

Tue December 14, 2021

1. Updated Stan to C++ compiler v2.28.2 (development).

Mon October 18, 2021

1. Updated Stan to C++ compiler v2.28.0 (development).
2. Supported complex numbers.
3. Building `libsundials_kinsol` on Windows.
4. Allowed static build of TBB objects.

Tue August 3, 2021

1. Updated package dependencies.
2. Updated Stan to C++ compiler v2.26.1.
3. Built libsundials_kinsol into `libStanHeaders`.
4. Fixed variational method checks.
5. Fixed elt_divide() ambiguity with the old version of Stan to C++ compiler.
6. Converted unit testing to use `testthat`.
7. Cleaned up and update startup messages.

Thu February 18, 2021

1. Updated to Stan v2.26.1

Fri February 5, 2021

1. Using Stan transpiler ([`stanc3`](https://github.com/stan-dev/stanc3)) to generate C++ code from Stan code.
2. Reorganized directory structure and removed redundant [`math`](https://github.com/stan-dev/math) submodule.
3. Updated the symlinks in `StanHeaders/inst/include` for the reorganized directory structure.
4. Updated the [`stan`](https://github.com/stan-dev/stan) and [`math`](https://github.com/stan-dev/math) submodules, recursively, and fixed related issues.