@@ -27,6 +27,7 @@ stan_model <- function(file,
                        auto_write = rstan_options("auto_write"),
                        obfuscate_model_name = TRUE,
                        allow_undefined = FALSE,
+                       allow_optimizations = FALSE,
                        standalone_functions = FALSE,
                        use_opencl = FALSE,
                        warn_pedantic = FALSE,
@@ -66,6 +67,7 @@ stan_model <- function(file,
                        model_name = model_name, verbose = verbose,
                        obfuscate_model_name = obfuscate_model_name,
                        allow_undefined = allow_undefined,
+                       allow_optimizations = allow_optimizations,
                        standalone_functions = standalone_functions,
                        use_opencl = use_opencl,
                        warn_pedantic = warn_pedantic,
