@@ -114,6 +114,7 @@ stanc_process <- function(file, model_code = '', model_name = "anon_model",
 stanc_builder <- function(file, isystem = c(dirname(file), getwd()),
                           verbose = FALSE, obfuscate_model_name = FALSE,
                           allow_undefined = FALSE,
+                          allow_optimizations = FALSE,
                           standalone_functions = FALSE,
                           use_opencl = FALSE,
                           warn_pedantic = FALSE,
@@ -148,6 +149,7 @@ stanc_builder <- function(file, isystem = c(dirname(file), getwd()),
                model_name = model_name, verbose = verbose,
                obfuscate_model_name = obfuscate_model_name,
                allow_undefined = allow_undefined,
+               allow_optimizations = allow_optimizations,
                standalone_functions = standalone_functions,
                use_opencl = use_opencl,
                warn_pedantic = warn_pedantic,
@@ -158,6 +160,7 @@ stanc_builder <- function(file, isystem = c(dirname(file), getwd()),
 stanc <- function(file, model_code = '', model_name = "anon_model",
                   verbose = FALSE, obfuscate_model_name = TRUE,
                   allow_undefined = FALSE,
+                  allow_optimizations = FALSE,
                   standalone_functions = FALSE,
                   use_opencl = FALSE,
                   warn_pedantic = FALSE,
@@ -208,11 +211,13 @@ stanc <- function(file, model_code = '', model_name = "anon_model",
 
   stopifnot(stanc_ctx$validate("stanc"))
   stanc_flags <- c("allow-undefined",
+                   "O",
                    "standalone-functions",
                    "use-opencl",
                    "warn-pedantic",
                    "warn-uninitialized")
   istanc_flags <- c(allow_undefined,
+                    allow_optimizations,
                     standalone_functions,
                     use_opencl,
                     warn_pedantic,
